--- a/index.html
+++ b/index.html
@@ -99,11 +99,9 @@
     <section class="top" data-scroll-section id="top"><div class="border"><span></span></div></section>
     <section class="hero" data-scroll-section>
       <div class="hero__back">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+        <span class="hero__back_line"></span>
+        <span class="hero__back_line"></span>
+        <span class="hero__back_line"></span>
         <div class="border"><span></span></div>
       </div>
       <div class="container hero__container">
