--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <script>window.console = window.console || function(t) {};</script>
-  <title>Arrows</title>
+  <title>Unitodi</title>
 </head>
 <body>
   <div class="overlay"></div>
@@ -941,36 +941,322 @@
               </p>
             </div>
           </div>
-          <div class="canwedo__buttons">
-            <button class="button">Submit</button>
-            <button class="button">Submit</button>
-            <button class="button">Submit</button>
-            <button class="button">Submit</button>
+          <div class="canwedo__buttons animate_right">
+            <button class="button button__color body_small canwedo__button canwedo__button_one active">
+              <span class="button__hover"></span>
+              <span class="button__text">Дистрибуция</span>
+            </button>
+            <button class="button button__color body_small canwedo__button canwedo__button_two">
+              <span class="button__hover"></span>
+              <span class="button__text">Сервис</span>
+            </button>
+            <button class="button button__color body_small canwedo__button canwedo__button_three">
+              <span class="button__hover"></span>
+              <span class="button__text">Разработка</span>
+            </button>
+            <button class="button button__color body_small canwedo__button canwedo__button_four">
+              <span class="button__hover"></span>
+              <span class="button__text">Логистика</span>
+            </button>
           </div>
-          <div class="canwedo__information">
-            <div class="canwedo__info">
-              <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
-              <p class="canwedo__description body_small">
-                Производство и поставка POS-терминалов, банкоматов 
-                и дополнительных аксессуаров к ним. Lorem ipsum dolor 
-                sit amet consectetur. Elit et mi hendrerit eget morbi. 
-                Tempus pellentesque eu viverra porttitor. Libero id 
-                mattis ornare arcu praesent fames pellentesque hac. 
-                Imperdiet non non cursus et.
-              </p>
-              <div class="canwedo__link">
-                <a href="#" class="btn btn__link">
-                  <span>Узнать больше</span>
-                  <span class="btn__arrow">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
-                      <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
-                    </svg>
-                  </span>
-                </a>
+          <div class="canwedo__informations">
+            <div class="canwedo__information canwedo__information_one active">
+              <div class="canwedo__info">
+                <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
+                <p class="canwedo__description body_small">
+                  Производство и поставка POS-терминалов, банкоматов 
+                  и дополнительных аксессуаров к ним. Lorem ipsum dolor 
+                  sit amet consectetur. Elit et mi hendrerit eget morbi. 
+                  Tempus pellentesque eu viverra porttitor. Libero id 
+                  mattis ornare arcu praesent fames pellentesque hac. 
+                  Imperdiet non non cursus et.
+                </p>
+                <div class="canwedo__link">
+                  <a href="#" class="btn btn__link">
+                    <span>Узнать больше</span>
+                    <span class="btn__arrow">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                        <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div class="canwedo__tags">
+                  <p class="canwedo__tag">Быстро</p>
+                  <p class="canwedo__tag">Удобно</p>
+                  <p class="canwedo__tag">Качественно</p>
+                </div>
+              </div>
+              <div class="canwedo__image">
+                <img src="img/canwedo/canwedo_1.webp" alt="">
               </div>
             </div>
-            <div class="canwedo__image">
-              <img src="img/canwedo/canwedo_1.webp" alt="">
+            <div class="canwedo__information canwedo__information_two">
+              <div class="canwedo__info">
+                <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
+                <p class="canwedo__description body_small">
+                  Производство и поставка POS-терминалов, банкоматов 
+                  и дополнительных аксессуаров к ним. Lorem ipsum dolor 
+                  sit amet consectetur. Elit et mi hendrerit eget morbi. 
+                  Tempus pellentesque eu viverra porttitor. Libero id 
+                  mattis ornare arcu praesent fames pellentesque hac. 
+                  Imperdiet non non cursus et.
+                </p>
+                <div class="canwedo__link">
+                  <a href="#" class="btn btn__link">
+                    <span>Узнать больше</span>
+                    <span class="btn__arrow">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                        <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div class="canwedo__tags">
+                  <p class="canwedo__tag">Быстро</p>
+                  <p class="canwedo__tag">Удобно</p>
+                  <p class="canwedo__tag">Качественно</p>
+                </div>
+              </div>
+              <div class="canwedo__image">
+                <img src="img/canwedo/canwedo_1.webp" alt="">
+              </div>
+            </div>
+            <div class="canwedo__information canwedo__information_three">
+              <div class="canwedo__info">
+                <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
+                <p class="canwedo__description body_small">
+                  Производство и поставка POS-терминалов, банкоматов 
+                  и дополнительных аксессуаров к ним. Lorem ipsum dolor 
+                  sit amet consectetur. Elit et mi hendrerit eget morbi. 
+                  Tempus pellentesque eu viverra porttitor. Libero id 
+                  mattis ornare arcu praesent fames pellentesque hac. 
+                  Imperdiet non non cursus et.
+                </p>
+                <div class="canwedo__link">
+                  <a href="#" class="btn btn__link">
+                    <span>Узнать больше</span>
+                    <span class="btn__arrow">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                        <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div class="canwedo__tags">
+                  <p class="canwedo__tag">Быстро</p>
+                  <p class="canwedo__tag">Удобно</p>
+                  <p class="canwedo__tag">Качественно</p>
+                </div>
+              </div>
+              <div class="canwedo__image">
+                <img src="img/canwedo/canwedo_1.webp" alt="">
+              </div>
+            </div>
+            <div class="canwedo__information canwedo__information_four">
+              <div class="canwedo__info">
+                <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
+                <p class="canwedo__description body_small">
+                  Производство и поставка POS-терминалов, банкоматов 
+                  и дополнительных аксессуаров к ним. Lorem ipsum dolor 
+                  sit amet consectetur. Elit et mi hendrerit eget morbi. 
+                  Tempus pellentesque eu viverra porttitor. Libero id 
+                  mattis ornare arcu praesent fames pellentesque hac. 
+                  Imperdiet non non cursus et.
+                </p>
+                <div class="canwedo__link">
+                  <a href="#" class="btn btn__link">
+                    <span>Узнать больше</span>
+                    <span class="btn__arrow">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                        <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                      </svg>
+                    </span>
+                  </a>
+                </div>
+                <div class="canwedo__tags">
+                  <p class="canwedo__tag">Быстро</p>
+                  <p class="canwedo__tag">Удобно</p>
+                  <p class="canwedo__tag">Качественно</p>
+                </div>
+              </div>
+              <div class="canwedo__image">
+                <img src="img/canwedo/canwedo_1.webp" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="history" data-scroll-section>
+      <div class="container history__container">
+        <div class="border"><span></span></div>
+        <div class="history__block">
+          <div class="history___slider">
+            <div class="history___swiper swiper">
+              <div class="history___wrapper swiper-wrapper">
+                <div class="history__flex swiper-slide">
+                  <div class="history__info">
+                    <p class="history__name text_color sub_one">Наш путь</p>
+                    <h2 class="history__head">История компании</h2>
+                    <p class="history__desc">
+                      Lorem ipsum dolor sit amet consectetur. Morbi eu congue 
+                      velit integer mus neque orci. Nisi egestas cursus amet a 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum.
+                    </p>
+                  </div>
+                </div>
+                <div class="history__flex swiper-slide">
+                  <div class="history__info">
+                    <p class="history__name text_color sub_one">Ваш путь</p>
+                    <h2 class="history__head">История вашей компании</h2>
+                    <p class="history__desc">
+                      Lorem ipsum dolor sit amet consectetur. Morbi eu congue 
+                      velit integer mus neque orci. Nisi egestas cursus amet a 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum. 
+                      Nullam morbi nascetur orci nisl dictum.
+                    </p>
+                  </div>
+                </div>
+                <div class="history__flex swiper-slide">
+                  <div class="history__info">
+                    <p class="history__name text_color sub_one">Их путь</p>
+                    <h2 class="history__head">История их компании</h2>
+                    <p class="history__desc">
+                      Lorem ipsum dolor sit amet consectetur. Morbi eu congue 
+                      velit integer mus neque orci. Nisi egestas cursus amet a 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum. 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum.
+                    </p>
+                  </div>
+                </div>
+                <div class="history__flex swiper-slide">
+                  <div class="history__info">
+                    <p class="history__name text_color sub_one">Его путь</p>
+                    <h2 class="history__head">История его компании</h2>
+                    <p class="history__desc">
+                      Lorem ipsum dolor sit amet consectetur. Morbi eu congue 
+                      velit integer mus neque orci. Nisi egestas cursus amet a 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum. 
+                      Lorem ipsum dolor sit amet consectetur. Morbi eu congue 
+                      velit integer mus neque orci. Nisi egestas cursus amet a 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum.
+                    </p>
+                  </div>
+                </div>
+                <div class="history__flex swiper-slide">
+                  <div class="history__info">
+                    <p class="history__name text_color sub_one">Ты путь</p>
+                    <h2 class="history__head">История твоей компании</h2>
+                    <p class="history__desc">
+                      Lorem ipsum dolor sit amet consectetur. Morbi eu congue 
+                      velit integer mus neque orci. Nisi egestas cursus amet a 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum. 
+                      Lorem ipsum dolor sit amet consectetur. Morbi eu congue 
+                      velit integer mus neque orci. Nisi egestas cursus amet a 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum. 
+                      Nullam morbi nascetur orci nisl dictum.
+                    </p>
+                  </div>
+                </div>
+                <div class="history__flex swiper-slide">
+                  <div class="history__info">
+                    <p class="history__name text_color sub_one">Он путь</p>
+                    <h2 class="history__head">Он компания</h2>
+                    <p class="history__desc">
+                      Lorem ipsum dolor sit amet consectetur. Morbi eu congue 
+                      velit integer mus neque orci. Nisi egestas cursus amet a 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum. 
+                      Lorem ipsum dolor sit amet consectetur. Morbi eu congue 
+                      velit integer mus neque orci. Nisi egestas cursus amet a 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum. 
+                      odio vehicula. Turpis leo eros nunc amet est quam. 
+                      Nullam morbi nascetur orci nisl dictum. 
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="history__buttons">
+              <div class="history__rotate">
+                <div class="history__information active">
+                  <div class="history__subrotate">
+                    <button class="history__button sub_one">
+                      <span class="history__text"><span>1</span></span>
+                    </button>
+                    <p class="history__heading sub_one">Основание компании</p>
+                  </div>
+                </div>
+                <div class="history__information">
+                  <div class="history__subrotate">
+                    <button class="history__button sub_one">
+                      <span class="history__text"><span>2</span></span>
+                    </button>
+                    <p class="history__heading sub_one">Основание компании</p>
+                  </div>
+                </div>
+                <div class="history__information">
+                  <div class="history__subrotate">
+                    <button class="history__button sub_one">
+                      <span class="history__text"><span>3</span></span>
+                    </button>
+                    <p class="history__heading sub_one">Основание компании</p>
+                  </div>
+                </div>
+                <div class="history__information">
+                  <div class="history__subrotate">
+                    <button class="history__button sub_one">
+                      <span class="history__text"><span>4</span></span>
+                    </button>
+                    <p class="history__heading sub_one">Основание компании</p>
+                  </div>
+                </div>
+                <div class="history__information">
+                  <div class="history__subrotate">
+                    <button class="history__button sub_one">
+                      <span class="history__text"><span>5</span></span>
+                    </button>
+                    <p class="history__heading sub_one">Основание компании</p>
+                  </div>
+                </div>
+                <div class="history__information">
+                  <div class="history__subrotate">
+                    <button class="history__button sub_one">
+                      <span class="history__text"><span>6</span></span>
+                    </button>
+                    <p class="history__heading sub_one">Основание компании</p>
+                  </div>
+                </div>
+              </div>
+              <p class="history__date text_color">2002</p>
+            </div>
+            <div class="history__navigation">
+              <div class="history__pagination swiper-pagination"></div>
+              <div class="history__counter body_one">
+                <span class="history__count">01</span>/<span class="history__total"></span>
+              </div>
+              <div class="history__navigation_flex">
+                <div class="swiper-button-prev history__prev">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                    <path d="M20.8477 23.6313L14.8542 16.9695L20.8477 10.2931L19.0026 8.24219L11.1508 16.9695L19.0026 25.6967L20.8477 23.6313Z" fill="currentColor"/>
+                  </svg>
+                </div>
+                <div class="swiper-button-next history__next">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                    <path d="M11.1523 23.6313L17.1458 16.9695L11.1523 10.2931L12.9974 8.24219L20.8492 16.9695L12.9974 25.6967L11.1523 23.6313Z" fill="currentColor"/>
+                  </svg>
+                </div>
+              </div>
             </div>
           </div>
         </div>
