--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
       </div>
     </section>
-    <section class="about" data-scroll-section>
+    <!-- <section class="about" data-scroll-section>
       <div class="container about__container">
         <div class="border"><span></span></div>
         <div class="about__block">
@@ -1087,7 +1087,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <section class="history" data-scroll-section>
       <div class="container history__container">
         <div class="border"><span></span></div>
@@ -1189,56 +1189,56 @@
             </div>
             <div class="history__buttons">
               <div class="history__rotate">
-                <div class="history__information active">
+                <div class="history__information" historydate="2002">
                   <div class="history__subrotate">
                     <button class="history__button sub_one">
-                      <span class="history__text"><span>1</span></span>
+                      <span class="history__text"><span></span></span>
                     </button>
                     <p class="history__heading sub_one">Основание компании</p>
                   </div>
                 </div>
-                <div class="history__information">
+                <div class="history__information" historydate="2004">
                   <div class="history__subrotate">
                     <button class="history__button sub_one">
-                      <span class="history__text"><span>2</span></span>
+                      <span class="history__text"><span></span></span>
                     </button>
                     <p class="history__heading sub_one">Основание компании</p>
                   </div>
                 </div>
-                <div class="history__information">
+                <div class="history__information" historydate="2006">
                   <div class="history__subrotate">
                     <button class="history__button sub_one">
-                      <span class="history__text"><span>3</span></span>
+                      <span class="history__text"><span></span></span>
                     </button>
                     <p class="history__heading sub_one">Основание компании</p>
                   </div>
                 </div>
-                <div class="history__information">
+                <div class="history__information" historydate="2008">
                   <div class="history__subrotate">
                     <button class="history__button sub_one">
-                      <span class="history__text"><span>4</span></span>
+                      <span class="history__text"><span></span></span>
                     </button>
                     <p class="history__heading sub_one">Основание компании</p>
                   </div>
                 </div>
-                <div class="history__information">
+                <div class="history__information" historydate="2010">
                   <div class="history__subrotate">
                     <button class="history__button sub_one">
-                      <span class="history__text"><span>5</span></span>
+                      <span class="history__text"><span></span></span>
                     </button>
                     <p class="history__heading sub_one">Основание компании</p>
                   </div>
                 </div>
-                <div class="history__information">
+                <div class="history__information" historydate="2012">
                   <div class="history__subrotate">
                     <button class="history__button sub_one">
-                      <span class="history__text"><span>6</span></span>
+                      <span class="history__text"><span></span></span>
                     </button>
                     <p class="history__heading sub_one">Основание компании</p>
                   </div>
                 </div>
               </div>
-              <p class="history__date text_color">2002</p>
+              <p class="history__date text_color">0</p>
             </div>
             <div class="history__navigation">
               <div class="history__pagination swiper-pagination"></div>
