--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
       </div>
     </section>
-    <!-- <section class="about" data-scroll-section>
+    <section class="about" data-scroll-section>
       <div class="container about__container">
         <div class="border"><span></span></div>
         <div class="about__block">
@@ -1087,7 +1087,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <section class="history" data-scroll-section>
       <div class="container history__container">
         <div class="border"><span></span></div>
