--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link href="img/favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="css/swiper.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
@@ -99,7 +98,7 @@
     <section class="top" data-scroll-section id="top"><div class="border"><span></span></div></section>
     <section class="hero" data-scroll-section>
       <div class="hero__back">
-        <span class="hero__back_line"></span>
+        <span class="hero__back_line divs"></span>
         <span class="hero__back_line"></span>
         <span class="hero__back_line"></span>
         <div class="border"><span></span></div>
