--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <section class="top" data-scroll-section id="top"><div class="border"><span></span></div></section>
     <section class="hero" data-scroll-section>
       <div class="hero__back">
-        <span class="hero__back_line divs"></span>
+        <span class="hero__back_line"></span>
         <span class="hero__back_line"></span>
         <span class="hero__back_line"></span>
         <div class="border"><span></span></div>
