--- a/index.html
+++ b/index.html
@@ -1190,29 +1190,33 @@
           <div class="canwedo__informations">
             <div class="canwedo__information canwedo__information_one active">
               <div class="canwedo__info">
-                <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
-                <p class="canwedo__description body_small">
-                  Производство и поставка POS-терминалов, банкоматов 
-                  и дополнительных аксессуаров к ним. Lorem ipsum dolor 
-                  sit amet consectetur. Elit et mi hendrerit eget morbi. 
-                  Tempus pellentesque eu viverra porttitor. Libero id 
-                  mattis ornare arcu praesent fames pellentesque hac. 
-                  Imperdiet non non cursus et.
-                </p>
-                <div class="canwedo__link">
-                  <a href="#" class="btn btn__link">
-                    <span>Узнать больше</span>
-                    <span class="btn__arrow">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
-                        <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
-                      </svg>
-                    </span>
-                  </a>
+                <div class="canwedo__info_top">
+                  <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
+                  <p class="canwedo__description body_small">
+                    Производство и поставка POS-терминалов, банкоматов 
+                    и дополнительных аксессуаров к ним. Lorem ipsum dolor 
+                    sit amet consectetur. Elit et mi hendrerit eget morbi. 
+                    Tempus pellentesque eu viverra porttitor. Libero id 
+                    mattis ornare arcu praesent fames pellentesque hac. 
+                    Imperdiet non non cursus et.
+                  </p>
+                  <div class="canwedo__link">
+                    <a href="#" class="btn btn__link">
+                      <span>Узнать больше</span>
+                      <span class="btn__arrow">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                          <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                        </svg>
+                      </span>
+                    </a>
+                  </div>
                 </div>
-                <div class="canwedo__tags">
-                  <p class="canwedo__tag">Быстро</p>
-                  <p class="canwedo__tag">Удобно</p>
-                  <p class="canwedo__tag">Качественно</p>
+                <div class="canwedo__info_bottom">
+                  <div class="canwedo__tags">
+                    <p class="canwedo__tag">Быстро</p>
+                    <p class="canwedo__tag">Удобно</p>
+                    <p class="canwedo__tag">Качественно</p>
+                  </div>
                 </div>
               </div>
               <div class="canwedo__image">
@@ -1221,29 +1225,33 @@
             </div>
             <div class="canwedo__information canwedo__information_two">
               <div class="canwedo__info">
-                <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
-                <p class="canwedo__description body_small">
-                  Производство и поставка POS-терминалов, банкоматов 
-                  и дополнительных аксессуаров к ним. Lorem ipsum dolor 
-                  sit amet consectetur. Elit et mi hendrerit eget morbi. 
-                  Tempus pellentesque eu viverra porttitor. Libero id 
-                  mattis ornare arcu praesent fames pellentesque hac. 
-                  Imperdiet non non cursus et.
-                </p>
-                <div class="canwedo__link">
-                  <a href="#" class="btn btn__link">
-                    <span>Узнать больше</span>
-                    <span class="btn__arrow">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
-                        <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
-                      </svg>
-                    </span>
-                  </a>
+                <div class="canwedo__info_top">
+                  <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
+                  <p class="canwedo__description body_small">
+                    Производство и поставка POS-терминалов, банкоматов 
+                    и дополнительных аксессуаров к ним. Lorem ipsum dolor 
+                    sit amet consectetur. Elit et mi hendrerit eget morbi. 
+                    Tempus pellentesque eu viverra porttitor. Libero id 
+                    mattis ornare arcu praesent fames pellentesque hac. 
+                    Imperdiet non non cursus et.
+                  </p>
+                  <div class="canwedo__link">
+                    <a href="#" class="btn btn__link">
+                      <span>Узнать больше</span>
+                      <span class="btn__arrow">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                          <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                        </svg>
+                      </span>
+                    </a>
+                  </div>
                 </div>
-                <div class="canwedo__tags">
-                  <p class="canwedo__tag">Быстро</p>
-                  <p class="canwedo__tag">Удобно</p>
-                  <p class="canwedo__tag">Качественно</p>
+                <div class="canwedo__info_bottom">
+                  <div class="canwedo__tags">
+                    <p class="canwedo__tag">Быстро</p>
+                    <p class="canwedo__tag">Удобно</p>
+                    <p class="canwedo__tag">Качественно</p>
+                  </div>
                 </div>
               </div>
               <div class="canwedo__image">
@@ -1252,29 +1260,33 @@
             </div>
             <div class="canwedo__information canwedo__information_three">
               <div class="canwedo__info">
-                <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
-                <p class="canwedo__description body_small">
-                  Производство и поставка POS-терминалов, банкоматов 
-                  и дополнительных аксессуаров к ним. Lorem ipsum dolor 
-                  sit amet consectetur. Elit et mi hendrerit eget morbi. 
-                  Tempus pellentesque eu viverra porttitor. Libero id 
-                  mattis ornare arcu praesent fames pellentesque hac. 
-                  Imperdiet non non cursus et.
-                </p>
-                <div class="canwedo__link">
-                  <a href="#" class="btn btn__link">
-                    <span>Узнать больше</span>
-                    <span class="btn__arrow">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
-                        <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
-                      </svg>
-                    </span>
-                  </a>
+                <div class="canwedo__info_top">
+                  <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
+                  <p class="canwedo__description body_small">
+                    Производство и поставка POS-терминалов, банкоматов 
+                    и дополнительных аксессуаров к ним. Lorem ipsum dolor 
+                    sit amet consectetur. Elit et mi hendrerit eget morbi. 
+                    Tempus pellentesque eu viverra porttitor. Libero id 
+                    mattis ornare arcu praesent fames pellentesque hac. 
+                    Imperdiet non non cursus et.
+                  </p>
+                  <div class="canwedo__link">
+                    <a href="#" class="btn btn__link">
+                      <span>Узнать больше</span>
+                      <span class="btn__arrow">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                          <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                        </svg>
+                      </span>
+                    </a>
+                  </div>
                 </div>
-                <div class="canwedo__tags">
-                  <p class="canwedo__tag">Быстро</p>
-                  <p class="canwedo__tag">Удобно</p>
-                  <p class="canwedo__tag">Качественно</p>
+                <div class="canwedo__info_bottom">
+                  <div class="canwedo__tags">
+                    <p class="canwedo__tag">Быстро</p>
+                    <p class="canwedo__tag">Удобно</p>
+                    <p class="canwedo__tag">Качественно</p>
+                  </div>
                 </div>
               </div>
               <div class="canwedo__image">
@@ -1283,29 +1295,33 @@
             </div>
             <div class="canwedo__information canwedo__information_four">
               <div class="canwedo__info">
-                <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
-                <p class="canwedo__description body_small">
-                  Производство и поставка POS-терминалов, банкоматов 
-                  и дополнительных аксессуаров к ним. Lorem ipsum dolor 
-                  sit amet consectetur. Elit et mi hendrerit eget morbi. 
-                  Tempus pellentesque eu viverra porttitor. Libero id 
-                  mattis ornare arcu praesent fames pellentesque hac. 
-                  Imperdiet non non cursus et.
-                </p>
-                <div class="canwedo__link">
-                  <a href="#" class="btn btn__link">
-                    <span>Узнать больше</span>
-                    <span class="btn__arrow">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
-                        <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
-                      </svg>
-                    </span>
-                  </a>
+                <div class="canwedo__info_top">
+                  <p class="canwedo__heading text_line sub_two">Дистрибуция</p>
+                  <p class="canwedo__description body_small">
+                    Производство и поставка POS-терминалов, банкоматов 
+                    и дополнительных аксессуаров к ним. Lorem ipsum dolor 
+                    sit amet consectetur. Elit et mi hendrerit eget morbi. 
+                    Tempus pellentesque eu viverra porttitor. Libero id 
+                    mattis ornare arcu praesent fames pellentesque hac. 
+                    Imperdiet non non cursus et.
+                  </p>
+                  <div class="canwedo__link">
+                    <a href="#" class="btn btn__link">
+                      <span>Узнать больше</span>
+                      <span class="btn__arrow">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="5" height="9" viewBox="0 0 5 9" fill="none">
+                          <path d="M0 7.935L3.09042 4.5L0 1.0575L0.951417 0L5 4.5L0.951417 9L0 7.935Z" fill="currentColor"/>
+                        </svg>
+                      </span>
+                    </a>
+                  </div>
                 </div>
-                <div class="canwedo__tags">
-                  <p class="canwedo__tag">Быстро</p>
-                  <p class="canwedo__tag">Удобно</p>
-                  <p class="canwedo__tag">Качественно</p>
+                <div class="canwedo__info_bottom">
+                  <div class="canwedo__tags">
+                    <p class="canwedo__tag">Быстро</p>
+                    <p class="canwedo__tag">Удобно</p>
+                    <p class="canwedo__tag">Качественно</p>
+                  </div>
                 </div>
               </div>
               <div class="canwedo__image">
@@ -1467,6 +1483,10 @@
                 </div>
               </div>
               <p class="history__date text_color">0</p>
+            </div>
+            <div class="history__subrotate_mobile">
+              <span class="history__text_mobile sub_one">1</span>
+              <p class="history__heading_mobile sub_one">Основание компании</p>
             </div>
             <div class="history__navigation">
               <div class="history__pagination swiper-pagination"></div>
