--- a/terminalCard.html
+++ b/terminalCard.html
@@ -731,7 +731,7 @@
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M8.78033 0.21967C9.07322 0.512563 9.07322 0.987437 8.78033 1.28033L3.78033 6.28033C3.48744 6.57322 3.01256 6.57322 2.71967 6.28033L0.21967 3.78033C-0.0732233 3.48744 -0.0732233 3.01256 0.21967 2.71967C0.512563 2.42678 0.987437 2.42678 1.28033 2.71967L3.25 4.68934L7.71967 0.21967C8.01256 -0.0732233 8.48744 -0.0732233 8.78033 0.21967Z" fill="currentColor"/>
                       </svg>
                     </span>
-                    <p class="form__checkbox_text body_two">Я даю свое согласие на обработку <a href="policy.html">персональных данных</a></p>
+                    <p class="form__checkbox_text body_two">Я даю свое согласие на <a href="policy.html">обработку персональных данных</a></p>
                   </label>
                   <button class="btn btn__primary">
                     <span>Отправить</span>
@@ -749,7 +749,8 @@
       </div>
     </section>
     <footer class="footer" data-scroll-section>
-      <div class="container footer__container animate_top">
+      <div class="container footer__container">
+        <div class="border"><span></span></div>
         <div class="footer__block">
           <div class="footer__top">
             <a href="index.html" class="footer__logo">
@@ -771,19 +772,19 @@
             <div class="footer__wrap_link">
               <div class="footer__navigation">
                 <ul class="footer__nav_list">
-                  <li class="footer__nav_item">
+                  <li class="footer__nav_item animate_top">
                     <a href="#" class="footer__nav_link body_caption">О нас</a>
                   </li>
-                  <li class="footer__nav_item">
+                  <li class="footer__nav_item animate_top">
                     <a href="#" class="footer__nav_link body_caption">Терминалы</a>
                   </li>
-                  <li class="footer__nav_item">
+                  <li class="footer__nav_item animate_top">
                     <a href="#" class="footer__nav_link body_caption">Программное обеспечение</a>
                   </li>
-                  <li class="footer__nav_item">
+                  <li class="footer__nav_item animate_top">
                     <a href="#" class="footer__nav_link body_caption">Вакансии</a>
                   </li>
-                  <li class="footer__nav_item">
+                  <li class="footer__nav_item animate_top">
                     <a href="#" class="footer__nav_link body_caption">Контакты</a>
                   </li>
                 </ul>
@@ -798,6 +799,7 @@
           <div class="footer__policy">
             <p class="body_caption">© Unitodi, 2024. Все права защищены</p>
             <a class="body_caption" href="policy.html">Политика конфиденциальности</a>
+            <a class="body_caption" target="_blank" href="https://anyera.ru/">Разработано Anyera Didgital & Disign</a>
           </div>
         </div>
       </div>
