--- a/vacancies.html
+++ b/vacancies.html
@@ -359,16 +359,16 @@
                       </div>
                     </div>
                     <div class="hero_vacancies__images">
-                      <div class="hero_vacancies__img">
+                      <div class="hero_vacancies__img animate_image">
                         <img src="img/vacancies/vacancies_hero/vacancies_hero_1.webp" alt="">
                       </div>
-                      <div class="hero_vacancies__img">
+                      <div class="hero_vacancies__img animate_image">
                         <img src="img/vacancies/vacancies_hero/vacancies_hero_2.webp" alt="">
                       </div>
-                      <div class="hero_vacancies__img">
+                      <div class="hero_vacancies__img animate_image">
                         <img src="img/vacancies/vacancies_hero/vacancies_hero_3.webp" alt="">
                       </div>
-                      <div class="hero_vacancies__img">
+                      <div class="hero_vacancies__img animate_image">
                         <img src="img/vacancies/vacancies_hero/vacancies_hero_4.webp" alt="">
                       </div>
                     </div>
