--- a/index.html
+++ b/index.html
@@ -331,9 +331,9 @@
       </div>
       <div class="container hero__container">
         <div class="hero__block">
-          <div class="hero___slider">
-            <div class="hero___swiper swiper">
-              <div class="hero___wrapper swiper-wrapper">
+          <div class="hero__slider">
+            <div class="hero__swiper swiper">
+              <div class="hero__wrapper swiper-wrapper">
                 <div class="hero__flex swiper-slide">
                   <div class="hero__info">
                     <p class="hero__head">Биометрический терминал <span class="text_color">P8 Bio</span></p>
@@ -1585,9 +1585,9 @@
           <p class="faq__name sub_one text_color">Обратная связь</p>
           <div class="faq__flex">
             <div class="faq__left">
-              <h2 class="faq__head">Остались вопросы?</h2>
-              <p class="faq__desc body_two">Пожалуйста, заполните форму и наш менеджер обязательно свяжется с вами в ближайшее рабочее время.</p>
-              <div class="faq__socials">
+              <h2 class="faq__head animate_top">Остались вопросы?</h2>
+              <p class="faq__desc body_two animate_top">Пожалуйста, заполните форму и наш менеджер обязательно свяжется с вами в ближайшее рабочее время.</p>
+              <div class="faq__socials animate_top">
                 <a href="#" class="faq__social">
                   <img src="img/icon/tg.svg" alt="">
                 </a>
