--- a/terminalCard.html
+++ b/terminalCard.html
@@ -516,7 +516,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   ОС
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   Android 12.0
                 </p>
               </li>
@@ -527,7 +527,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   ЦПУ
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   4-ядра, 2.0. ГГц
                 </p>
               </li>
@@ -538,7 +538,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Память
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   16 Гб, Flash / 2 Гб, RAM
                 </p>
               </li>
@@ -549,7 +549,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Дисплей
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   5’ IPS, 854×480 <br>
                   5.5' IPS, 1440×720 *
                 </p>
@@ -561,7 +561,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Картридеры
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   EMV, NFC
                 </p>
               </li>
@@ -572,7 +572,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Камера
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   5 Мп, автофокус <br>16 Мп, автофокус*
                 </p>
               </li>
@@ -583,7 +583,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Периферийные порты
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   1×USB-C
                 </p>
               </li>
@@ -594,7 +594,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Мобильный интернет
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   4G, eSim
                 </p>
               </li>
@@ -605,7 +605,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Wi-Fi
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   2.4 / 5 ГГц
                 </p>
               </li>
@@ -616,7 +616,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Bluetooth
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   Да
                 </p>
               </li>
@@ -627,7 +627,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Динамик
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   Да
                 </p>
               </li>
@@ -638,7 +638,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Питание
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   5 В / 2 А
                 </p>
               </li>
@@ -649,7 +649,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Батарейка
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   3000 мАч, 3.8 В *
                 </p>
               </li>
@@ -660,7 +660,7 @@
                 <p class="terminals_icon__subtitle animate_left sub_two">
                   Аксессуары 
                 </p>
-                <p class="terminals_icon__text animate_left small">
+                <p class="terminals_icon__text animate_left body_small">
                   Кронштейн: 1×USB, 1×Ethernet, 1×DC. Y-кабель: 1×USB-A, 1×USB-A(питание)
                 </p>
               </li>
@@ -675,9 +675,9 @@
           <p class="faq__name sub_one text_color">Обратная связь</p>
           <div class="faq__flex">
             <div class="faq__left">
-              <h2 class="faq__head">Остались вопросы?</h2>
-              <p class="faq__desc body_two">Пожалуйста, заполните форму и наш менеджер обязательно свяжется с вами в ближайшее рабочее время.</p>
-              <div class="faq__socials">
+              <h2 class="faq__head animate_top">Остались вопросы?</h2>
+              <p class="faq__desc body_two animate_top">Пожалуйста, заполните форму и наш менеджер обязательно свяжется с вами в ближайшее рабочее время.</p>
+              <div class="faq__socials animate_top">
                 <a href="#" class="faq__social">
                   <img src="img/icon/tg.svg" alt="">
                 </a>
