--- a/terminals.html
+++ b/terminals.html
@@ -352,7 +352,7 @@
                 </a>
               </div>
             </div>
-            <div class="hero__image">
+            <div class="hero__image hero__image_circles">
               <div class="hero__circles">
                 <button class="hero__circles_mouse active">
                   <span class="hero__circle">P8 Bio</span>
